Update gradle files

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,8 +14,9 @@
 # limitations under the License.
 ################################################################################
 
-kotlin.code.style=official
+release_version = 0.0.1
 
-release_version=0.0.1
+description = 'Cache Common'
 
-docker_image_name=
+vcs_url = https://github.com/th2-net/th2-cache-common
+
