--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,9 @@ plugins {
     id 'java-library'
     id 'org.jetbrains.kotlin.jvm' version '1.7.0'
     id 'org.jetbrains.kotlin.kapt' version '1.7.0'
-    id 'application'
-    id 'com.palantir.docker' version '0.25.0'
+    id 'signing'
+    id 'maven-publish'
+    id "io.github.gradle-nexus.publish-plugin" version "1.0.0"
 }
 
 ext {
@@ -31,33 +32,16 @@ dependencies {
     compileOnly 'com.google.auto.service:auto-service:1.0.1'
     kapt 'com.google.auto.service:auto-service:1.0.1'
 
-    api platform('com.exactpro.th2:bom:4.0.2')
-
-    implementation 'com.exactpro.th2:grpc-common:4.0.0-th2-2150-books-pages-1606698156-SNAPSHOT'
-    implementation 'com.exactpro.th2:common:4.0.0-TH2-4262-reduce-load-book-and-page-3574992387-SNAPSHOT'
-    implementation 'com.exactpro.th2:common-utils:0.0.1-book-and-page-3572891451-SNAPSHOT'
-    implementation 'com.exactpro.th2:processor-core:0.0.1-TH2-4262-reduce-load-book-and-page-3627816228-ffc970b-SNAPSHOT'
-
-    implementation group: 'net.jpountz.lz4', name: 'lz4', version: '1.3.0'
+    implementation 'net.jpountz.lz4:lz4:1.3.0'
     implementation 'io.github.microutils:kotlin-logging:3.0.4'
-
-    implementation 'io.prometheus:simpleclient'
 
     implementation 'com.fasterxml.jackson.core:jackson-core'
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
-    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 
-    implementation 'io.ktor:ktor-server-netty:2.0.2'
-    implementation 'org.ehcache:ehcache:3.10.0'
-
-    implementation 'com.rabbitmq:amqp-client'
-
-    implementation "io.grpc:grpc-protobuf"
-    implementation "com.google.protobuf:protobuf-java-util"
-
-    implementation group: 'com.arangodb', name: 'arangodb-java-driver', version: '6.17.0'
-    implementation("com.arangodb:velocypack:2.0.0")
-    implementation("com.arangodb:jackson-dataformat-velocypack:3.0.0")
+    implementation 'com.arangodb:arangodb-java-driver:6.20.0'
+    implementation 'com.arangodb:velocypack:2.5.4'
+    implementation 'com.arangodb:jackson-dataformat-velocypack:3.0.1'
 }
 
 jar {
@@ -73,32 +57,100 @@ jar {
         )
     }
 }
+// conditionals for publications
+tasks.withType(PublishToMavenRepository) {
+    onlyIf {
+        (repository == publishing.repositories.nexusRepository &&
+                project.hasProperty('nexus_user') &&
+                project.hasProperty('nexus_password') &&
+                project.hasProperty('nexus_url')) ||
+                (repository == publishing.repositories.sonatype &&
+                        project.hasProperty('sonatypeUsername') &&
+                        project.hasProperty('sonatypePassword'))
+    }
+}
+tasks.withType(Sign) {
+    onlyIf { project.hasProperty('signingKey') &&
+            project.hasProperty('signingPassword')
+    }
+}
+// disable running task 'initializeSonatypeStagingRepository' on a gitlab
+tasks.whenTaskAdded {task ->
+    if(task.name.equals('initializeSonatypeStagingRepository') &&
+            !(project.hasProperty('sonatypeUsername') && project.hasProperty('sonatypePassword'))
+    ) {
+        task.enabled = false
+    }
+}
 
-applicationName = 'service'
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from(components.java)
+            pom {
+                name = rootProject.name
+                packaging = 'jar'
+                description = rootProject.description
+                url = vcs_url
+                scm {
+                    url = vcs_url
+                }
+                licenses {
+                    license {
+                        name = 'The Apache License, Version 2.0'
+                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+                developers {
+                    developer {
+                        id = 'developer'
+                        name = 'developer'
+                        email = 'developer@exactpro.com'
+                    }
+                }
+                scm {
+                    url = vcs_url
+                }
+            }
+        }
+    }
+    repositories {
+        //Nexus repo to publish from gitlab
+        maven {
+            name = 'nexusRepository'
+            credentials {
+                username = project.findProperty('nexus_user')
+                password = project.findProperty('nexus_password')
+            }
+            url = project.findProperty('nexus_url')
+        }
+    }
+}
 
-distTar {
-    archiveName "${applicationName}.tar"
+nexusPublishing {
+    repositories {
+        sonatype {
+            nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
+            snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
+        }
+    }
+}
+
+signing {
+    def signingKey = findProperty("signingKey")
+    def signingPassword = findProperty("signingPassword")
+    useInMemoryPgpKeys(signingKey, signingPassword)
+    sign publishing.publications.mavenJava
 }
 
 test {
     useJUnitPlatform()
 }
 
-dockerPrepare {
-    dependsOn distTar
-}
-
-docker {
-    copySpec.from(tarTree("$buildDir/distributions/${applicationName}.tar"))
-}
-
 compileKotlin {
     kotlinOptions.jvmTarget = "11"
 }
 
-application {
-    mainClass.set('com.exactpro.th2.processor.MainKt')
-}
 
 configurations.all {
     resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
