--- a/.github/workflows/java-publish-sonatype.yml
+++ b/.github/workflows/java-publish-sonatype.yml
@@ -3,19 +3,19 @@ name: Build and release Java distributions to sonatype.
 on:
   push:
     branches:
-    - master
-    - version-*
+      - master
+      - version-*
     paths:
-    - gradle.properties
+      - gradle.properties
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up JDK 11
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: '11'
       - name: Build with Gradle
