--- a/build.gradle
+++ b/build.gradle
@@ -44,8 +44,8 @@ dependencies {
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 
     implementation 'com.arangodb:arangodb-java-driver:6.20.0'
+    implementation 'com.arangodb:velocypack:2.5.4'
     implementation 'com.arangodb:jackson-dataformat-velocypack:3.1.0'
-
 }
 
 jar {
